highlight creation and deletion working

--- a/app/assets/stylesheets/_global_html.sass
+++ b/app/assets/stylesheets/_global_html.sass
@@ -65,7 +65,8 @@ input.danger
 .rtl
   direction: rtl
 
-.dark_highlight
+.dark_highlight,
+.highlighted.dark_bg
   color: $gray_light
 
 form.full_page_form label
