--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -297,7 +297,7 @@
 .note > .label:hover
   display: block
 
-.verse.dark_highlight
+.verse.highlighted.dark_bg
   color: $gray_light
 
 // `Nav Arrows
