--- a/app/assets/stylesheets/_global_html.sass
+++ b/app/assets/stylesheets/_global_html.sass
@@ -53,7 +53,7 @@ small,
   font-size: 24px !important
   line-height: 1.3
   padding-left: 20px
-  
+
 .danger a
   color: $red
 input.danger
@@ -61,10 +61,13 @@ input.danger
   color: white !important
   background-image: -webkit-linear-gradient($red,#A00) !important
   text-shadow: #B00 0 1px 1px !important
-  
+
+.rtl
+  direction: rtl
+
 .dark_highlight
   color: $gray_light
-  
+
 form.full_page_form label
   display: block
 
