fixed versions#indix and versions#show actions

--- a/app/views/versions/index.html.haml
+++ b/app/views/versions/index.html.haml
@@ -6,7 +6,7 @@
   %ul
     - @versions_by_lang.each do |lang, versions|
       %li
-        = lang[:human]
+        = versions.first.language.human
         %ul
-          - versions.each do |id, version|
+          - versions.each do |version|
             %li= link_to version.title , version_path(version)
