--- a/app/views/versions/show.html.haml
+++ b/app/views/versions/show.html.haml
@@ -1,4 +1,17 @@
+- content_for :sidebar do
+  .widget
+    %header
+      %span
+        =t("versions.widget title")
+    %ul.widget_menu
+      %li
+        %p= @version.publisher.name
+      - unless @version.publisher.url.nil?
+        %li
+          = link_to(t("versions.visit publisher"), @version.publisher.url)
+        %li
+          = link_to t("versions.read title"), bible_path((last_read || default_reference).merge(version: @version))
 %article
   %h1= @version
-  .copyright!= @version.info.html_safe
-  %p= link_to t("read this version"), bible_path(Reference.new("john.1", version: @version))
+  %h2= @version.publisher.name
+  %p.copyright= @version.info.html_safe
