--- a/app/views/users/terms.html.haml
+++ b/app/views/users/terms.html.haml
@@ -5,6 +5,9 @@
   %h1= t("users.terms.title", youversion: t("youversion"))
   %h4.mute= t("users.revised date", date: "6/5/2012")
   %hr
+  - if I18n.locale != I18n.default_locale
+    %p.disclaimer= t('users.terms.translation disclaimer')
+    %hr
   - sections = ["acceptance", "description", "registration", "privacy", "account", "conduct", "international", "content", "contributions", "indemnity", "storage", "modifications", "termination", "dealings", "links", "rights", "limitation", "beneficiaries", "notice", "trademark", "copyright"]
   - opts = {home_link: link_to("http://youversion.com", "http://youversion.com"), terms_link: link_to("http://youversion.com/terms", "http://youversion.com/terms"), mailto_link: link_to("legal@youversion.com", "mailto:legal@youversion.com"), lifechurch_link: link_to("LifeChurch.tv", "http://www.lifechurch.tv"), line_break: "<br><br>", item: "<br><span style='margin-left:30px'></span>", newline: "<br>"}
   %ol
