--- a/app/views/users/_connections_tabs.html.haml
+++ b/app/views/users/_connections_tabs.html.haml
@@ -15,7 +15,10 @@
       = t('connected as user', connection: t(@show), username: @user.connections[@show].nickname)
       %span.confirm
         %a{:href => delete_connection_path(@show.to_sym), "data-confirm-text" => t('confirm danger'), "data-method" => "delete", :rel => "nofollow"}= t('remove connection')
-    %p= t('connection users', connection: t(@show)) unless @users.empty?
-    = render partial: "list"
+    - if @users.present?
+      %p= t('connection users', connection: t(@show))
+      = render partial: "list"
+    - else
+      %p= @users_error ? t('users.reset connection') : @empty_message
   - else
     = link_to t('connect to', connection: t(@show)), new_connection_path(@show.to_s, redirect: connections_path(show: @show.to_s))
