fixed changing password

--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -11,8 +11,8 @@
     %br
     = f.password_field :password
   %p
-    = f.label :password_confirm, t('users.profile.confirm password')
+    = f.label :confirm_password, t('users.profile.confirm password')
     %br
-    = f.password_field :password_confirm
+    = f.password_field :confirm_password
   %p
     = f.submit t('users.my password')
