--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -4,7 +4,7 @@
 %article
   - if current_auth
     - if request.path == user_plans_path(current_user)
-      %h1= t("plans.my plans")
+      %h1.float_left= t("plans.my plans")
       %dl.combo_button.float_right
         %dt
         %dd
@@ -12,15 +12,15 @@
         %dd.highlighted
           = link_to t("plans.my plans"), user_plans_path(current_user)
     - else
-      %h1= t("plans.browse plans", category: @categories.current_name || t("plans.all")) 
+      %h1.float_left= t("plans.browse plans", category: @categories.current_name || t("plans.all"))
       %dl.combo_button.float_right
-        %dt 
+        %dt
         %dd.highlighted
           = link_to t("plans.all plans"), plans_path
         %dd
           = link_to t("plans.my plans"), user_plans_path(current_user)
   - else
-    %h1= t("plans.browse plans", category: @categories.current_name || t("plans.all")) 
+    %h1= t("plans.browse plans", category: @categories.current_name || t("plans.all"))
   .split_pane{:style => "padding-top:15px"}
     .plan_search
       %form{method: 'get'}
