--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -1,6 +1,10 @@
 // `Main
 //----------------------------------------------------------------------------------------------------
 
+.outer_container
+  position: absolute
+  opacity: 0
+
 #main
   float: left
   margin: 0 0 10px
@@ -271,8 +275,14 @@
   padding: 2px 4px 3px
   vertical-align: top
 
-.note *
-  display: none
+.note
+  display: inline-block
+
+.inner_container
+  left: 0
+  display: block
+  position: relative
+  max-width: 120px
 
 .note > .label
   +round
@@ -291,10 +301,25 @@
     top: 4px
     right: 2px
     bottom: 5px
+    left: 2px
   padding: 2px 4px 3px
   vertical-align: top
 
-.note > .label:hover
+.note > .outer_container > .inner_container >.body
+  +round
+  +background-image(linear-gradient(#f7f7f7, #e8e8e8))
+  background-color: #eee
+  border: 1px solid #ccc
+  font:
+    family: $body_font
+    size: 10px
+    weight: bold
+  line-height: 1.3
+  margin:
+    top: 4px
+    right: 2px
+    bottom: 5px
+  padding: 4px 8px 6px
   display: block
 
 .verse.highlighted.dark_bg
