adding support for fullscreen param

--- a/app/assets/stylesheets/_parallel_mode.sass
+++ b/app/assets/stylesheets/_parallel_mode.sass
@@ -35,3 +35,13 @@
 
 .parallel_mode .float_right_in_parallel_mode
   float: right !important
+
+.parallel_mode .nav_prev,
+.parallel_mode .nav_next.rtl
+  background-position: 10px 48%
+  margin-left: -82px
+
+.parallel_mode .nav_next,
+.parallel_mode .nav_prev.rtl
+  margin-left: 825px
+  background-position: -58px 48%
