fixed some notes bugs

--- a/app/views/shared/_share_buttons.html.haml
+++ b/app/views/shared/_share_buttons.html.haml
@@ -1,5 +1,5 @@
 %div{style: "position: relative; top: -6px; margin-right: 20px; display: inline-block;"}
-  %a{name: "fb_share", class: "fb_iframe_widget", type: "button_count", href: "http://www.facebook.com/sharer.php"} Share
+  %a{name: "fb_share", class: "fb_iframe_widget", type: "button_count", href: "http://www.facebook.com/sharer.php"}
   %script{src: "http://static.ak.fbcdn.net/connect.php/js/FB.Share", type: "text/javascript"}
 %div{style: "display: inline-block;"}
   %a{href: "http://twitter.com/share", class: "twitter-share-button", via: "YouVersion", "data-count" => "horizontal", "data-related" => "youversion"} Tweet
