--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -15,7 +15,7 @@
   %p
     = f.label :reference, t("notes.reference field")
     = @note.reference_list.map{|r| link_to(r, bible_path(r))}.join(", ").html_safe
-    = hidden_field_tag "note[references]", @note.reference_list.to_usfm
+    = hidden_field_tag "note[references]", @note.reference_list.to_flat_usfm
   %p
     = f.label :user_status, t("notes.status field")
     = f.select :user_status, options_for_select(object_status, @note.user_status)
