--- a/app/views/plans/_pane_no_devotional.html.haml
+++ b/app/views/plans/_pane_no_devotional.html.haml
@@ -15,7 +15,8 @@
   - if !@reading.references.empty?
     %span.float_right{style: "margin-top: -6px"}
       =render partial: 'ref_buttons', locals: {reference: @reading.references[@content_page].ref, audio_div_style: "top: 172px; left: 463px; position: absolute; z-index: 1;"}
-      .embedded_reader{"data-setting-font" => @font, 'data-setting-size' => @size, style: "padding-left: 30px; padding-bottom: 30px;"}= @reading.references[@content_page].ref.content(format: 'html').join.html_safe
+      .embedded_reader{"data-setting-font" => @font, 'data-setting-size' => @size, style: "padding-left: 30px; padding-bottom: 30px;"}
+        = @reading.references[@content_page].ref.content.html_safe
     = render partial: 'reading_completed_button', locals: {plan: @subscription, cur_reading_index: @content_page, reading: @reading, day: @day}
   - else
     %div{style: "text-align: center"}= t('plans.no content')
