--- a/app/views/plans/_plan_ref_check_and_title.html.haml
+++ b/app/views/plans/_plan_ref_check_and_title.html.haml
@@ -3,7 +3,7 @@
     %input{type: "hidden", name: "_method", value: "put"}
     %input{type: "hidden", name: "ref", value: reference.ref.to_usfm}
     %input{type: "hidden", name: "completed", value: (!reference.completed?).to_s}
-    %input{type: "hidden", name: "version", value: plan.version}
+    %input{type: "hidden", name: "version", value: plan.version_id}
     - if day != plan.current_day
       %input{type: "hidden", name: "day_target", value: day.to_s}
     - if cur_reading_index != 0
@@ -12,4 +12,4 @@
 - else
   .float_left{title: t("plans.must start to complete"), style: "margin-top: 10px"}
     %input{type: "checkbox", id: "filler_box#{index}", disabled: "true"}
-%a{href: (cur_reading_index == index) ? nil : plan_path(plan.to_param, day: day.to_s, content: (index > 0 ? index.to_s : nil), version: params[:version]), style: "margin-top: 2px"}= reference.ref.ref_string
+%a{href: (cur_reading_index == index) ? nil : plan_path(plan.to_param, day: day.to_s, content: (index > 0 ? index.to_s : nil), version: params[:version]), style: "margin-top: 2px"}= reference.ref.human
