--- a/app/assets/stylesheets/_embedded_reader.sass
+++ b/app/assets/stylesheets/_embedded_reader.sass
@@ -1,7 +1,7 @@
 // `Main
 //----------------------------------------------------------------------------------------------------
 
-.embedded_reader .verse > strong:first-child
+.embedded_reader .verse > .label
   background: none
   border: none
   color: $body_text
