removing logging of full response for every API transaction... :-||

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -243,6 +243,10 @@
 // `Main > Verses
 //----------------------------------------------------------------------------------------------------
 
+.wordsofchrist,
+.wj .content
+  color: #cc0000
+
 #verses_selected_form
   display: block
   overflow: hidden
