--- a/app/views/search/_bible_list_item.html.haml
+++ b/app/views/search/_bible_list_item.html.haml
@@ -1,3 +1,5 @@
 %li
-  %a= link_to "#{item.reference.human} (#{item.version.upcase.match(/\A[^-_]*/)})", reference_path(item.reference)
-  %p.search_results= item.highlight ? item.highlight.html_safe : item.content
+  - if item.reference.usfm.present?
+    %a= link_to "#{item.reference.human} (#{item.version.local_abbreviation.upcase || item.version.abbreviation.upcase})", bible_path(Reference.new(item.reference.usfm, version: item.version.id))
+  - if item.highlight.present? || item.content.present?
+    %p.search_results= item.highlight ? item.highlight.html_safe : item.content
