--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -14,8 +14,8 @@
 %article{"data-setting-font" => @font, 'data-setting-size' => @size, "data-selected-verses" => "[#{@verses}]", "data-verse-modal-enabled" => "#{!@single_verse.nil?}", "data-fullscreen" =>@full_screen, "data-book" => @reference[:book].to_s, "data-book-api" => @reference[:book].sub(/[a-z]/) {|m| m.upcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
   %div.nav_items
     - direction = 'rtl' if @version.try(:rtl?)
-    = link_to("previous", bible_path(@reference.previous), class: "nav_prev #{direction}") if @reference.previous
-    = link_to("next", bible_path(@reference.next), class: "nav_next #{direction}") if @reference.next
+    = link_to("previous", bible_path(@reference.previous_chapter), class: "nav_prev #{direction}") if @reference.previous_chapter
+    = link_to("next", bible_path(@reference.next_chapter), class: "nav_next #{direction}") if @reference.next_chapter
   #version_primary{"data-reference" => @reference.to_param, "data-abbreviation" => @version.try(:abbreviation).upcase, class: @version.try(:text_direction)}
     = @reference.content.html_safe if @reference.content
   #version_secondary{"data-reference" => @alt_reference.to_param, "data-abbreviation" => @alt_version.try(:abbreviation).upcase, class: @alt_version.try(:text_direction)}
