Fixed Firefox flash divs span too wide. Closes #333

--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -26,6 +26,7 @@ br + textarea
   text-shadow: #fff 0 1px 0
   position: fixed
   cursor: pointer
+  +box-sizing(border-box)
 
 .flash_error, .form_errors
   background:
