reading and widget notes/bookmarks/highlights working with new paths

--- a/app/cells/notes_list_widget/stub.html.haml
+++ b/app/cells/notes_list_widget/stub.html.haml
@@ -1,7 +1,7 @@
-%div.widget.notes.ajax_me{"data-ajax" => "/bible/#{@reference}/notes"}
+%div.widget.notes.ajax_me{"data-ajax" => "#{bible_path(@reference)}/notes"}
 
   %header
-    %span.header_icon_note= @title 
+    %span.header_icon_note= @title
   %section
     %table
       %tbody
