--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -1,20 +1,15 @@
-:ruby
-  if @link_params
-    href = url_for(@link_params)
-  else
-    href = "#DEBUG"
-  end
+- link_params = url_for(@link_params).match(/\?(.+)/).try(:[], 1) if @link_params
 
-.dynamic_menu.version_select{style: @force_style, id: @is_alt ? "menu_alt_version" : "menu_version", "data-link-base" => href, "data-link-needs-param" => (!@link_params.nil?).to_s}
+
+.dynamic_menu.version_select{style: @force_style, id: @is_alt ? "menu_alt_version" : "menu_version", "data-link-params" => link_params}
   .spinner_wrapper{style: "display: none;"}
     #version_spinner.dynamic_menu_spinner
   %span.menu_arrow
     &nbsp;
   .scroll
     %table
-      - if !@recent_versions.empty?
+      - if @recent_versions.present?
         %tr
           %th{:colspan => '2'}= t('recent versions')
-        - @recent_versions.each do |v|
-          = render partial: 'item', locals: {version: v}
+        = render partial: 'items', locals: {versions: @recent_versions}
       = render_cell :version_selector, :all_versions, version: @version, reference: @ref, is_alt: @is_alt, force_style: @force_style, link_params: @link_params, site: @site
