--- a/app/views/users/devices.html.haml
+++ b/app/views/users/devices.html.haml
@@ -8,7 +8,8 @@
         %h4= "#{d.vendor} #{d.model}"
         %p.mute.negative_gutter_top_half
           = d.os
-          = t('registered ago', time_ago: time_ago_in_words(d.created_date))
+          %br
+          = t('registered ago', time_ago: time_ago_in_words(d.created_dt))
   - else
     %li
       %h4= t('users.no devices')
