handle missing primary last_read version, for forwards compaitibility

--- a/app/views/references/invalid_ref.html.haml
+++ b/app/views/references/invalid_ref.html.haml
@@ -1,4 +1,4 @@
-- @title = @reference.to_s
+- @title = t("ref.invalid chapter title")
 - @reader_menus = true
 - @share_menu = false
 - @verse_modals = false
