fixing bug where user can't see settings page because API doesn't give users endpoint anymore

--- a/app/views/plans/settings.html.haml
+++ b/app/views/plans/settings.html.haml
@@ -16,8 +16,8 @@
       - if !current_user.subscribed_to? @subscription
         %li
           = link_to(t("plans.view sample"), @subscription.to_param)
-      %li
-        = link_to(t("plans.users subscribed", user_count: number_with_delimiter(@subscription.users.count)), plan_users_path(@subscription.to_param))
+      / %li
+      /   = link_to(t("plans.users subscribed", user_count: number_with_delimiter(@subscription.users.count)), plan_users_path(@subscription.to_param))
   .widget
     %header
       %span
