only show ad widget for bdc to english users

--- a/app/views/shared/_sidebar_global_before.html.haml
+++ b/app/views/shared/_sidebar_global_before.html.haml
@@ -1,1 +1,3 @@
-= render 'shared/widget_ad_bdc' if @site.class == SiteConfigs::Site #2 week lifetime: only render for youversion.com
+/This code has a two week lifetime
+- if @site.class == SiteConfigs::Site && [:en, :"en-GB"].include?(I18n.locale)
+  = render 'shared/widget_ad_bdc'
