--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -15,6 +15,8 @@
 
     %p= t('about page.youversion copy 2')
 
+  - if @site.class == SiteConfigs::Bible
+
     %h2= t('about page.bible dot com title')
     %p= t('about page.bible dot com copy').html_safe
 
