--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -1,6 +1,6 @@
 #container.no_sidebar
   padding-left: 0px
-  
+
 #main article, #main article::after
   background: none
   background-image: none
@@ -10,15 +10,15 @@
 #hero
   background: image-url("laptop.png") no-repeat
   height: 535px
-  
+
 #hero #hero_content
   float: right
   width: 350px
   margin-top: 100px
-  
+
 #hero #hero_content h1
   font-weight: bold
-  
+
 #hero_content .cta
   background: #81A951
   background: -moz-linear-gradient(top, #81A951 0%, #679037 100%)
@@ -41,11 +41,11 @@
   border-radius: 4px
   border: 1px #607346 solid
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3)
-  
+
 #main article ul
   margin-top: 30px
 
-#main article ul li 
+#main article ul li
   display: block
   float: left
   width: 220px
@@ -56,35 +56,40 @@
 #main article ul li.first
   margin-left: 10px
   margin-top: 50px
-  
+
 #main article ul li.last
   margin-right: 0px
   margin-top: 50px
-  
+
 #main article ul li h2
   font-size: 16px
 
 #main article ul li.read_bible
   background: image-url("read_bible_icon.jpg") no-repeat 15px 0px
-  
+
 #main article ul li.study_bible
   background: image-url("highlight_bible_icon.jpg") no-repeat 15px 0px
-  
+
 #main article ul li.subscribe_bible
   background: image-url("subscribe_bible_icon.jpg") no-repeat 15px 0px
-  
+
 #main article ul li.take_bible
   background: image-url("take_bible_icon.jpg") no-repeat 15px 0px
 
 #main article ul li .pod_content
   border: 1px solid #e3e3e1
   border-radius: 4px
-  padding: 20px  
-  
+  padding: 20px
+
 #main article .bottom_cta
   background: #eaeae8 image-url("app-icon-en-73x73.png") no-repeat 30px 30px
   padding: 20px 20px 20px 130px
-  
-  
+
+
 #footer
   padding: 20px 10px
+
+
+.flash_error
+  margin: 0px
+  width: 980px
