super basic style for 404

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -17,11 +17,11 @@
   margin: 0
   padding: 0
   background: image-url("partner_shadow.gif") no-repeat bottom center
-  
+
 .partners_content .partners_box div img
   border: 1px solid #F4F4F4
   width: 235px
-  
+
 .partners_content .partners_box div:last-child
   width: auto
   height: auto
@@ -75,7 +75,7 @@
 #mobile_content .multilingual
   width: 40%
 
-.multilingual p 
+.multilingual p
   font-size: 13px
   line-height: 1.4
 
@@ -91,7 +91,7 @@
 #mobile_downloads h3
   font-size: 15px
 
-#mobile_downloads ul 
+#mobile_downloads ul
   width: 50%
   list-style: none
 
@@ -100,7 +100,7 @@
   padding: 0
   margin: 10px 0
 
-#mobile_downloads ul li a 
+#mobile_downloads ul li a
   font-weight: bold
   color: $green
 
@@ -123,7 +123,7 @@ a.cta img
   padding-right: 10px
 a.cta h4
   margin: 0px
-  padding: 0px 
+  padding: 0px
   font-size: 16px
   text-shadow: 0px 1px 0px rgba(0,0,0,.2)
   color: #fff
@@ -131,36 +131,36 @@ a.cta h4
 a.cta span
   text-shadow: 0px 1px 0px rgba(0,0,0,.2)
   margin: 0px
-  padding: 0px 
+  padding: 0px
   font-size: 13px
   color: #fff
   float: left
 
-#dl_iphone 
+#dl_iphone
   background: image-url("mobile_dl_icons.png") 0px 0px no-repeat !important
 
-#dl_android 
+#dl_android
   background: image-url("mobile_dl_icons.png") 0px -50px no-repeat !important
 
-#dl_blackberry 
+#dl_blackberry
   background: image-url("mobile_dl_icons.png") 0px -100px no-repeat !important
 
-#dl_windows 
+#dl_windows
   background: image-url("mobile_dl_icons.png") 0px -150px no-repeat !important
 
-#dl_windows8 
+#dl_windows8
   background: image-url("mobile_dl_icons.png") 0px -150px no-repeat !important
 
-#dl_hppalm 
+#dl_hppalm
   background: image-url("mobile_dl_icons.png") 0px -200px no-repeat !important
 
-#dl_java 
+#dl_java
   background: image-url("mobile_dl_icons.png") 0px -250px no-repeat !important
 
-#dl_symbian 
+#dl_symbian
   background: image-url("mobile_dl_icons.png") 0px -300px no-repeat !important
 
-#dl_mobile 
+#dl_mobile
   background: image-url("mobile_dl_icons.png") 0px -350px no-repeat !important
 
 #dl_amazon
@@ -173,7 +173,7 @@ a.cta span
 
 #main section.testimonials ul li
   width: 24.3%
-  float: left 
+  float: left
   padding: 5px 20px 10px 55px
   margin: 0
   background: image-url("mobile_quote.png") no-repeat 15px 0px
@@ -189,4 +189,12 @@ a.cta span
 
 #main section.testimonials ul li p
   margin: 3px 0 0 0
-  
+
+article.error
+  text-align: center
+  h2
+    margin-top: 30px
+    margin-bottom: 50px
+  p
+    margin-top: 100px
+
