--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -1,3 +1,13 @@
+body
+  background: image-url('white_top_bg.jpg') repeat-x
+
+#wrapper
+  padding: 4px 10px 0px
+
+#header_outer
+  background: none
+  position: static
+
 #container.no_sidebar
   padding-left: 0px
 
@@ -6,6 +16,7 @@
   background-image: none
   border: none
   padding: 10px
+  box-shadow: none
 
 #hero
   background: image-url("laptop.png") no-repeat
@@ -42,6 +53,11 @@
   border: 1px #607346 solid
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3)
 
+.hero_shadow
+  position: relative
+  top: -1px
+  width: 100%  
+  
 #main article ul
   margin-top: 30px
 
@@ -78,18 +94,91 @@
 
 #main article ul li .pod_content
   border: 1px solid #e3e3e1
-  border-radius: 4px
+  border-radius: 10px
   padding: 20px
+  background: #f5f5f4
+  box-shadow: inset 0px 1px 3px #999
 
 #main article .bottom_cta
   background: #eaeae8 image-url("app-icon-en-73x73.png") no-repeat 30px 30px
-  padding: 20px 20px 20px 130px
+  padding: 30px 20px 20px 130px
+  border-radius: 5px
+  box-shadow: inset 0px 1px 3px #999
+  overflow: hidden
+  
+  p
+    width: 500px
+    float: left
+    margin-right: 50px
+    
+  a
+    float: left
+    background: -moz-linear-gradient(top, #666666 0%, #494949 100%)
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #666666), color-stop(100%, #494949))
+    background: -webkit-linear-gradient(top, #666666 0%, #494949 100%)
+    background: -o-linear-gradient(top, #666666 0%, #494949 100%)
+    background: -ms-linear-gradient(top, #666666 0%, #494949 100%)
+    background: linear-gradient(top, #666666 0%,#494949 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#666666', endColorstr='#494949',GradientType=0 )
+    display: block
+    color: #fff
+    font-weight: bold
+    font-size: 16px
+    text-align: center
+    text-decoration: none
+    padding: 5px 15px
+    width: 200px
+    float: left
+    border-radius: 4px
+    border: 1px #607346 solid
+    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3)
+   
+  h2
+    margin-bottom: 10px 
+    
 
-
+#main article .explore_cta
+  background: #3787d6
+  padding: 30px 20px 20px 130px
+  border-radius: 5px
+  overflow: hidden
+  margin-bottom: 30px
+  box-shadow: 0 0 5px #888
+    
+  a
+    float: left
+    background: #81A951
+    background: -moz-linear-gradient(top, #81A951 0%, #679037 100%)
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #81A951), color-stop(100%, #679037))
+    background: -webkit-linear-gradient(top, #81A951 0%, #679037 100%)
+    background: -o-linear-gradient(top, #81A951 0%, #679037 100%)
+    background: -ms-linear-gradient(top, #81A951 0%, #679037 100%)
+    background: linear-gradient(top, #81A951 0%,#679037 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#81A951', endColorstr='#679037',GradientType=0 )
+    display: block
+    color: #fff
+    font-weight: bold
+    font-size: 16px
+    text-align: center
+    text-decoration: none
+    padding: 5px 15px
+    width: 200px
+    float: left
+    border-radius: 4px
+    border: 1px #607346 solid
+    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3)
+   
+  h1
+    margin-bottom: 10px 
+    margin-left: 80px
+    font-size: 42px
+    float: left
+    margin-right: 30px
+    color: #fff
+    
 #footer
   padding: 20px 10px
-
-
+  
 .flash_error
   margin: 0px
   width: 980px
