--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -1,5 +1,8 @@
 body
   background: image-url('white_top_bg.jpg') repeat-x
+  
+p
+  margin-bottom: 0
 
 #wrapper
   padding: 4px 10px 0px
@@ -27,18 +30,20 @@ body
   width: 350px
   margin-top: 100px
 
-#hero #hero_content h1
-  font-weight: bold
+#hero #hero_content 
+  h1
+    font-size: 50px
+    font-family: Arial
+    letter-spacing: -0.05em
+    margin-left: -20px
+  p
+    font-size: 18px
+    color: #666
+    line-height: 1.3em
+    margin-bottom: 40px
 
-#hero_content .cta
-  background: #81A951
-  background: -moz-linear-gradient(top, #81A951 0%, #679037 100%)
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #81A951), color-stop(100%, #679037))
-  background: -webkit-linear-gradient(top, #81A951 0%, #679037 100%)
-  background: -o-linear-gradient(top, #81A951 0%, #679037 100%)
-  background: -ms-linear-gradient(top, #81A951 0%, #679037 100%)
-  background: linear-gradient(top, #81A951 0%,#679037 100%)
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#81A951', endColorstr='#679037',GradientType=0 )
+.cta
+  background: #91B164
   display: block
   color: #fff
   font-weight: bold
@@ -47,11 +52,12 @@ body
   text-decoration: none
   padding: 5px 35px
   width: 175px
-  margin-left: 40px
+  margin-left: 20px
   float: left
   border-radius: 4px
   border: 1px #607346 solid
-  box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3)
+  box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
+  text-shadow: 0 -1px 0 #657C46
 
 .hero_shadow
   position: relative
@@ -60,113 +66,74 @@ body
   
 #main article ul
   margin-top: 30px
-
-#main article ul li
-  display: block
-  float: left
-  width: 220px
-  margin-right: 20px
-  padding-top: 220px
-  padding-left: 0px
-
-#main article ul li.first
-  margin-left: 10px
-  margin-top: 50px
-
-#main article ul li.last
-  margin-right: 0px
-  margin-top: 50px
-
-#main article ul li h2
-  font-size: 16px
-
-#main article ul li.read_bible
-  background: image-url("read_bible_icon.jpg") no-repeat 15px 0px
-
-#main article ul li.study_bible
-  background: image-url("highlight_bible_icon.jpg") no-repeat 15px 0px
-
-#main article ul li.subscribe_bible
-  background: image-url("subscribe_bible_icon.jpg") no-repeat 15px 0px
-
-#main article ul li.take_bible
-  background: image-url("take_bible_icon.jpg") no-repeat 15px 0px
-
-#main article ul li .pod_content
-  border: 1px solid #e3e3e1
-  border-radius: 10px
-  padding: 20px
-  background: #f5f5f4
-  box-shadow: inset 0px 1px 3px #999
-
-#main article .bottom_cta
-  background: #eaeae8 image-url("app-icon-en-73x73.png") no-repeat 30px 30px
-  padding: 30px 20px 20px 130px
-  border-radius: 5px
-  box-shadow: inset 0px 1px 3px #999
-  overflow: hidden
-  
-  p
-    width: 500px
-    float: left
-    margin-right: 50px
-    
-  a
-    float: left
-    background: -moz-linear-gradient(top, #666666 0%, #494949 100%)
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #666666), color-stop(100%, #494949))
-    background: -webkit-linear-gradient(top, #666666 0%, #494949 100%)
-    background: -o-linear-gradient(top, #666666 0%, #494949 100%)
-    background: -ms-linear-gradient(top, #666666 0%, #494949 100%)
-    background: linear-gradient(top, #666666 0%,#494949 100%)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#666666', endColorstr='#494949',GradientType=0 )
-    display: block
-    color: #fff
-    font-weight: bold
-    font-size: 16px
-    text-align: center
-    text-decoration: none
-    padding: 5px 15px
-    width: 200px
-    float: left
-    border-radius: 4px
-    border: 1px #607346 solid
-    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3)
    
-  h2
-    margin-bottom: 10px 
-    
+  li
+    display: block
+    float: left
+    width: 220px
+    margin-right: 20px
+    padding-top: 220px
+    padding-left: 0px
+ 
+  li.first
+    margin-left: 10px
+    margin-top: 50px
+
+  li.last
+    margin-right: 0px
+    margin-top: 50px
+
+  li h2
+    font-size: 16px
+
+  li.read_bible
+    background: image-url("read_bible_icon.jpg") no-repeat 15px 0px
+
+  .study_bible
+    background: image-url("highlight_bible_icon.jpg") no-repeat 15px 0px
+
+  li.subscribe_bible
+    background: image-url("subscribe_bible_icon.jpg") no-repeat 15px 0px
+
+  .take_bible
+    background: image-url("take_bible_icon.jpg") no-repeat 15px 0px
+
+  li .pod_content
+    border: 1px solid #E5E4E2
+    border-bottom: 1px solid #FFF
+    border-radius: 10px
+    padding: 20px
+    background: #f5f5f4
+    box-shadow: inset 0px 2px 4px rgba(#000, .12)    
 
 #main article .explore_cta
   background: #3787d6
-  padding: 30px 20px 20px 130px
+  padding: 20px 20px 10px 130px
   border-radius: 5px
   overflow: hidden
   margin-bottom: 30px
-  box-shadow: 0 0 5px #888
+  box-shadow: inset 0px -2px 0px rgba(255, 255, 255, 1)
+  
+  h1
+    font-family: Arial
+    letter-spacing: -0.05em
     
   a
     float: left
-    background: #81A951
-    background: -moz-linear-gradient(top, #81A951 0%, #679037 100%)
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #81A951), color-stop(100%, #679037))
-    background: -webkit-linear-gradient(top, #81A951 0%, #679037 100%)
-    background: -o-linear-gradient(top, #81A951 0%, #679037 100%)
-    background: -ms-linear-gradient(top, #81A951 0%, #679037 100%)
-    background: linear-gradient(top, #81A951 0%,#679037 100%)
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#81A951', endColorstr='#679037',GradientType=0 )
+    background: #91B164
     display: block
     color: #fff
     font-weight: bold
     font-size: 16px
     text-align: center
     text-decoration: none
-    padding: 5px 15px
+    padding: 5px 35px
     width: 200px
-    float: left
+    margin-left: 20px
     border-radius: 4px
     border: 1px #607346 solid
-    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3)
+    box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
+    text-shadow: 0 -1px 0 #657C46
    
   h1
     margin-bottom: 10px 
@@ -176,9 +143,165 @@ body
     margin-right: 30px
     color: #fff
     
+#main article .bottom_cta
+  background: #eaeae8 image-url("app-icon-en-73x73.png") no-repeat 30px 52%
+  padding: 20px 20px 15px 130px
+  border-radius: 10px
+  box-shadow: inset 0px 2px 4px rgba(#000, .12)
+  overflow: hidden
+  border: 1px solid #E5E4E2
+  border-bottom: 1px solid #FFF        
+  
+  p
+    width: 500px
+    float: left
+    margin-right: 50px
+    line-height: 1.3em
+    
+  a
+    float: left
+    background: #666
+    display: block
+    color: #fff
+    font-weight: bold
+    font-size: 16px
+    text-align: center
+    text-decoration: none
+    padding: 5px 15px
+    width: 200px
+    border-radius: 5px
+    border: 1px #575757 solid
+    box-shadow: inset 0px 2px 0px rgba(#FFF, 0.3), inset 0 -2px 0 rgba(#000, 0.3)
+    margin-top: -20px
+   
+  h2
+    margin-bottom: 10px
+        
 #footer
   padding: 20px 10px
   
 .flash_error
   margin: 0px
   width: 980px
+
+// ----------------------------------- Media queries -----------------------------------
+
+@media only screen and (max-width: 480px)
+
+  body
+    background: none
+    background-color: #EAEAE8
+    min-width: 0
+
+  #wrapper
+    margin: 0
+    padding: 0
+    width: auto
+  
+  #header_outer
+    background: none
+    padding: 0
+    position: static
+    width: auto
+    z-index: 0
+  
+  #header
+    width: 100%
+    form, nav
+      display: none
+    #nav
+      width: 40%
+    
+  #main
+    float: none
+    width: auto
+    margin: 0
+    
+    article
+      position: static
+      min-height: auto
+      padding: 0
+      
+      #hero
+        background: none
+        background-color: #FFF
+        height: auto
+        padding: 16px
+        
+        #hero_content
+          float: none
+          width: auto
+          margin-top: 0
+          
+          .cta
+            padding: 5px 35px
+            width: 90%
+            margin: 0 auto
+            float: none
+          
+          h1
+            font-size: 36px
+            margin-left: 0
+            
+          p
+            font-size: 15px
+            
+      .hero_shadow
+        position: static
+        margin-top: -23px
+            
+      ul
+        margin: 0
+        li, li.last, li.first
+          float: none
+          width: auto
+          margin: 0 auto 20px
+          padding: 0
+          width: 90%
+          border-radius: 10px
+          .pod_content
+            border-radius: 10px
+          p
+            margin: 0
+          h2, p
+            width: 70%
+        li.last
+          margin-bottom: 0
+          
+        li.read_bible
+          background: image-url("read_bible_icon_m.png") no-repeat 93% 20px #F0EFED
+        li.study_bible
+          background: image-url("highlight_bible_icon_m.png") no-repeat 93% 20px #F0EFED
+        li.subscribe_bible
+          background: image-url("subscribe_bible_icon_m.png") no-repeat 93% 20px #F0EFED
+        li.take_bible
+          background: image-url("take_bible_icon_m.png") no-repeat 93% 20px #F0EFED
+
+      .explore_cta
+        border-radius: 0
+        padding: 20px
+        margin-top: 20px
+        h1, a
+          float: none
+          margin: 0
+        h1
+          margin-bottom: 10px
+      
+      .bottom_cta
+        width: auto
+        padding: 0 20px
+        background-position: 20px 0
+        box-shadow: none
+        border: 0
+        h2, p
+          width: auto
+        h2
+          margin-left: 90px
+        p
+          margin: 0 0 0 90px
+        a
+          margin: 20px 0
+          width: 100%
+        
+  .flash_error
+    width: auto
